<resources>
    <string name="app_name">aphasicComm</string>
    <string name="labelHome">Home - AphasicCom</string>
    <string name="labelConfig">Configuración - AphasicCom</string>
    <string name="textDictionary">Dictionary</string>
    <string name="labelHouse">House</string>
    <string name="labelPrueba">label Test</string>
    <string name="labelLunch">Lunch</string>
    <string name="labelSchool">School</string>
    <string name="labelWc">WC</string>
    <string name="labelStreet">Street</string>
    <string name="labelMind">Mind</string>
    <string name="fastAccess">Fast Access</string>
    <string name="espanol">Spanish</string>
    <string name="name_user" translatable="false">Name</string>
    <string name="tagName">Your Name</string>
    <string name="tagLanguage">Your Language</string>
    <string name="tagVoice">Select Voice</string>
    <string name="buttonImage">Change image</string>
    <string name="idioma_espanol" translatable="false">Español</string>
    <string name="idioma_ingles" translatable="false">Inglés</string>
    <string name="select_action" translatable="false">Select Action</string>
    <string name="select_photo_gallery" translatable="false">Select Photo Gallery</string>
    <string name="capture_photo" translatable="false">Capture Photo</string>
    <string name="iconHouse">House</string>
    <string name="iconLaunch">Launch</string>
    <string name="iconSchool">School</string>
    <string name="iconWc">Wc</string>
    <string name="iconStreet">Street</string>
    <string name="iconStateOfMind">Mind</string>
    <string name="image_user" translatable="false">men</string>
    <string name="buttonSave">Save</string>



</resources>